@startuml
'https://plantuml.com/class-diagram

Security --* ISIN
Security --* Ticker
ISIN --* Luhn

class Security {
    - string _security_type
    - ISIN _isin
    - string _ticker
    - string _company_name

    __properties__

    + string name
    + string isin
    + string ticker
    + string company_name

}

class ISIN {}

class Ticker {
    - string _ticker
    - string _ticker_type
    - int _ticker_length

    - string _process_ticker_type()

    __properties__

    + string ticker
    + string ticker_type
    + int ticker_length
}

class Luhn {
- str _checksum
- int _check_digit
- bool _valid

+ void __init__(str checksum)
+ void compute_check_digit()

+ str static transpose_isin_to_luhn_checksum(str isin)

}


@enduml